Fix font weight and alignment

--- a/web/app/css/sidebar.css
+++ b/web/app/css/sidebar.css
@@ -50,7 +50,7 @@
   }
 
   & .ant-menu-item {
-    padding: 10px 0px 11px 14px;
+    padding: 8px 0px 11px 14px;
   }
 
   & .ant-menu-item {
